minijava-parser.output
Terminals unused in grammar

   TT_Error


State 64 conflicts: 1 shift/reduce
State 88 conflicts: 7 shift/reduce
State 110 conflicts: 7 shift/reduce
State 111 conflicts: 7 shift/reduce
State 112 conflicts: 7 shift/reduce
State 113 conflicts: 7 shift/reduce
State 114 conflicts: 7 shift/reduce


Grammar

    0 $accept: Goal $end

    1 Goal: MainClass ClassDeclarationRepeated TT_Eof

    2 ClassDeclarationRepeated: %empty
    3                         | ClassDeclarationRepeated ClassDeclaration

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    5 ExtendsIdentifierOptional: %empty
    6                          | TT_Extends Identifier

    7 VarDeclarationRepeated: %empty
    8                       | VarDeclarationRepeated VarDeclaration

    9 MethodDeclarationRepeated: %empty
   10                          | MethodDeclarationRepeated MethodDeclaration

   11 ClassDeclaration: TT_Class Identifier ExtendsIdentifierOptional TT_LeftBrace VarDeclarationRepeated MethodDeclarationRepeated TT_RightBrace

   12 VarDeclaration: Type Identifier TT_Semicolon

   13 CommaTypeIdentifierRepeated: %empty
   14                            | CommaTypeIdentifierRepeated TT_Comma Type Identifier

   15 TypeIdentifierCommaTypeIdentifierRepeatedOptional: %empty
   16                                                  | Type Identifier CommaTypeIdentifierRepeated

   17 MethodDeclaration: TT_Public Type Identifier TT_LeftParen TypeIdentifierCommaTypeIdentifierRepeatedOptional TT_RightParen TT_LeftBrace VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace

   18 Type: TT_Int TT_LeftBracket TT_RightBracket
   19     | TT_Boolean
   20     | TT_Int
   21     | Identifier

   22 StatementRepeated: %empty
   23                  | StatementRepeated Statement

   24 Statement: TT_LeftBrace StatementRepeated TT_RightBrace
   25          | TT_If TT_LeftParen Expression TT_RightParen Statement TT_Else Statement
   26          | TT_While TT_LeftParen Expression TT_RightParen Statement
   27          | TT_Print TT_LeftParen Expression TT_RightParen TT_Semicolon
   28          | Identifier TT_Assignment Expression TT_Semicolon
   29          | Identifier TT_LeftBracket Expression TT_RightBracket TT_Assignment Expression TT_Semicolon

   30 CommaExpressionRepeated: %empty
   31                        | CommaExpressionRepeated TT_Comma Expression

   32 ExpressionCommaExpressionRepeatedOptional: %empty
   33                                          | Expression CommaExpressionRepeated

   34 Expression: Expression TT_And Expression
   35           | Expression TT_Less Expression
   36           | Expression TT_Plus Expression
   37           | Expression TT_Minus Expression
   38           | Expression TT_Star Expression
   39           | Expression TT_LeftBracket Expression TT_RightBracket
   40           | Expression TT_Dot TT_Length
   41           | Expression TT_Dot Identifier TT_LeftParen ExpressionCommaExpressionRepeatedOptional TT_RightParen
   42           | Number
   43           | TT_True
   44           | TT_False
   45           | Identifier
   46           | TT_This
   47           | TT_New TT_Int TT_LeftBracket Expression TT_RightBracket
   48           | TT_New Identifier TT_LeftParen TT_RightParen
   49           | TT_Bang Expression
   50           | TT_LeftParen Expression TT_RightParen

   51 Number: TT_Number

   52 Identifier: TT_Identifier


Terminals, with rules where they appear

$end (0) 0
error (256)
TT_Number <Number> (258) 51
TT_Identifier <Identifier> (259) 52
TT_Eof (260) 1
TT_Class (261) 4 11
TT_Public (262) 4 17
TT_Static (263) 4
TT_Void (264) 4
TT_Main (265) 4
TT_LeftBracket (266) 4 18 29 39 47
TT_RightBracket (267) 4 18 29 39 47
TT_LeftParen (268) 4 17 25 26 27 41 48 50
TT_RightParen (269) 4 17 25 26 27 41 48 50
TT_LeftBrace (270) 4 11 17 24
TT_RightBrace (271) 4 11 17 24
TT_Return (272) 17
TT_If (273) 25
TT_Print (274) 27
TT_String (275) 4
TT_New (276) 47 48
TT_Dot (277) 40 41
TT_Semicolon (278) 12 17 27 28 29
TT_Extends (279) 6
TT_Length (280) 40
TT_Else (281) 25
TT_While (282) 26
TT_Boolean (283) 19
TT_True (284) 43
TT_False (285) 44
TT_This (286) 46
TT_Int (287) 18 20 47
TT_Bang (288) 49
TT_And (289) 34
TT_Less (290) 35
TT_Plus (291) 36
TT_Minus (292) 37
TT_Star (293) 38
TT_Assignment (294) 28 29
TT_Comma (295) 14 31
TT_Error (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Goal (43)
    on left: 1, on right: 0
ClassDeclarationRepeated (44)
    on left: 2 3, on right: 1 3
MainClass (45)
    on left: 4, on right: 1
ExtendsIdentifierOptional (46)
    on left: 5 6, on right: 11
VarDeclarationRepeated (47)
    on left: 7 8, on right: 8 11 17
MethodDeclarationRepeated (48)
    on left: 9 10, on right: 10 11
ClassDeclaration (49)
    on left: 11, on right: 3
VarDeclaration (50)
    on left: 12, on right: 8
CommaTypeIdentifierRepeated (51)
    on left: 13 14, on right: 14 16
TypeIdentifierCommaTypeIdentifierRepeatedOptional (52)
    on left: 15 16, on right: 17
MethodDeclaration (53)
    on left: 17, on right: 10
Type (54)
    on left: 18 19 20 21, on right: 12 14 16 17
StatementRepeated (55)
    on left: 22 23, on right: 17 23 24
Statement (56)
    on left: 24 25 26 27 28 29, on right: 4 23 25 26
CommaExpressionRepeated (57)
    on left: 30 31, on right: 31 33
ExpressionCommaExpressionRepeatedOptional (58)
    on left: 32 33, on right: 41
Expression (59)
    on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50, on right:
    17 25 26 27 28 29 31 33 34 35 36 37 38 39 40 41 47 49 50
Number (60)
    on left: 51, on right: 42
Identifier (61)
    on left: 52, on right: 4 6 11 12 14 16 17 21 28 29 41 45 48


State 0

    0 $accept: . Goal $end
    1 Goal: . MainClass ClassDeclarationRepeated TT_Eof
    4 MainClass: . TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_Class  shift, and go to state 1

    Goal       go to state 2
    MainClass  go to state 3


State 1

    4 MainClass: TT_Class . Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4

    Identifier  go to state 5


State 2

    0 $accept: Goal . $end

    $end  shift, and go to state 6


State 3

    1 Goal: MainClass . ClassDeclarationRepeated TT_Eof
    2 ClassDeclarationRepeated: . %empty
    3                         | . ClassDeclarationRepeated ClassDeclaration

    $default  reduce using rule 2 (ClassDeclarationRepeated)

    ClassDeclarationRepeated  go to state 7


State 4

   52 Identifier: TT_Identifier .

    $default  reduce using rule 52 (Identifier)


State 5

    4 MainClass: TT_Class Identifier . TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_LeftBrace  shift, and go to state 8


State 6

    0 $accept: Goal $end .

    $default  accept


State 7

    1 Goal: MainClass ClassDeclarationRepeated . TT_Eof
    3 ClassDeclarationRepeated: ClassDeclarationRepeated . ClassDeclaration
   11 ClassDeclaration: . TT_Class Identifier ExtendsIdentifierOptional TT_LeftBrace VarDeclarationRepeated MethodDeclarationRepeated TT_RightBrace

    TT_Eof    shift, and go to state 9
    TT_Class  shift, and go to state 10

    ClassDeclaration  go to state 11


State 8

    4 MainClass: TT_Class Identifier TT_LeftBrace . TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_Public  shift, and go to state 12


State 9

    1 Goal: MainClass ClassDeclarationRepeated TT_Eof .

    $default  reduce using rule 1 (Goal)


State 10

   11 ClassDeclaration: TT_Class . Identifier ExtendsIdentifierOptional TT_LeftBrace VarDeclarationRepeated MethodDeclarationRepeated TT_RightBrace
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4

    Identifier  go to state 13


State 11

    3 ClassDeclarationRepeated: ClassDeclarationRepeated ClassDeclaration .

    $default  reduce using rule 3 (ClassDeclarationRepeated)


State 12

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public . TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_Static  shift, and go to state 14


State 13

    5 ExtendsIdentifierOptional: . %empty  [TT_LeftBrace]
    6                          | . TT_Extends Identifier
   11 ClassDeclaration: TT_Class Identifier . ExtendsIdentifierOptional TT_LeftBrace VarDeclarationRepeated MethodDeclarationRepeated TT_RightBrace

    TT_Extends  shift, and go to state 15

    $default  reduce using rule 5 (ExtendsIdentifierOptional)

    ExtendsIdentifierOptional  go to state 16


State 14

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static . TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_Void  shift, and go to state 17


State 15

    6 ExtendsIdentifierOptional: TT_Extends . Identifier
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4

    Identifier  go to state 18


State 16

   11 ClassDeclaration: TT_Class Identifier ExtendsIdentifierOptional . TT_LeftBrace VarDeclarationRepeated MethodDeclarationRepeated TT_RightBrace

    TT_LeftBrace  shift, and go to state 19


State 17

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void . TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_Main  shift, and go to state 20


State 18

    6 ExtendsIdentifierOptional: TT_Extends Identifier .

    $default  reduce using rule 6 (ExtendsIdentifierOptional)


State 19

    7 VarDeclarationRepeated: . %empty
    8                       | . VarDeclarationRepeated VarDeclaration
   11 ClassDeclaration: TT_Class Identifier ExtendsIdentifierOptional TT_LeftBrace . VarDeclarationRepeated MethodDeclarationRepeated TT_RightBrace

    $default  reduce using rule 7 (VarDeclarationRepeated)

    VarDeclarationRepeated  go to state 21


State 20

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main . TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_LeftParen  shift, and go to state 22


State 21

    8 VarDeclarationRepeated: VarDeclarationRepeated . VarDeclaration
    9 MethodDeclarationRepeated: . %empty  [TT_Public, TT_RightBrace]
   10                          | . MethodDeclarationRepeated MethodDeclaration
   11 ClassDeclaration: TT_Class Identifier ExtendsIdentifierOptional TT_LeftBrace VarDeclarationRepeated . MethodDeclarationRepeated TT_RightBrace
   12 VarDeclaration: . Type Identifier TT_Semicolon
   18 Type: . TT_Int TT_LeftBracket TT_RightBracket
   19     | . TT_Boolean
   20     | . TT_Int
   21     | . Identifier
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4
    TT_Boolean     shift, and go to state 23
    TT_Int         shift, and go to state 24

    $default  reduce using rule 9 (MethodDeclarationRepeated)

    MethodDeclarationRepeated  go to state 25
    VarDeclaration             go to state 26
    Type                       go to state 27
    Identifier                 go to state 28


State 22

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen . TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_String  shift, and go to state 29


State 23

   19 Type: TT_Boolean .

    $default  reduce using rule 19 (Type)


State 24

   18 Type: TT_Int . TT_LeftBracket TT_RightBracket
   20     | TT_Int .  [TT_Identifier]

    TT_LeftBracket  shift, and go to state 30

    $default  reduce using rule 20 (Type)


State 25

   10 MethodDeclarationRepeated: MethodDeclarationRepeated . MethodDeclaration
   11 ClassDeclaration: TT_Class Identifier ExtendsIdentifierOptional TT_LeftBrace VarDeclarationRepeated MethodDeclarationRepeated . TT_RightBrace
   17 MethodDeclaration: . TT_Public Type Identifier TT_LeftParen TypeIdentifierCommaTypeIdentifierRepeatedOptional TT_RightParen TT_LeftBrace VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace

    TT_Public      shift, and go to state 31
    TT_RightBrace  shift, and go to state 32

    MethodDeclaration  go to state 33


State 26

    8 VarDeclarationRepeated: VarDeclarationRepeated VarDeclaration .

    $default  reduce using rule 8 (VarDeclarationRepeated)


State 27

   12 VarDeclaration: Type . Identifier TT_Semicolon
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4

    Identifier  go to state 34


State 28

   21 Type: Identifier .

    $default  reduce using rule 21 (Type)


State 29

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String . TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_LeftBracket  shift, and go to state 35


State 30

   18 Type: TT_Int TT_LeftBracket . TT_RightBracket

    TT_RightBracket  shift, and go to state 36


State 31

   17 MethodDeclaration: TT_Public . Type Identifier TT_LeftParen TypeIdentifierCommaTypeIdentifierRepeatedOptional TT_RightParen TT_LeftBrace VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace
   18 Type: . TT_Int TT_LeftBracket TT_RightBracket
   19     | . TT_Boolean
   20     | . TT_Int
   21     | . Identifier
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4
    TT_Boolean     shift, and go to state 23
    TT_Int         shift, and go to state 24

    Type        go to state 37
    Identifier  go to state 28


State 32

   11 ClassDeclaration: TT_Class Identifier ExtendsIdentifierOptional TT_LeftBrace VarDeclarationRepeated MethodDeclarationRepeated TT_RightBrace .

    $default  reduce using rule 11 (ClassDeclaration)


State 33

   10 MethodDeclarationRepeated: MethodDeclarationRepeated MethodDeclaration .

    $default  reduce using rule 10 (MethodDeclarationRepeated)


State 34

   12 VarDeclaration: Type Identifier . TT_Semicolon

    TT_Semicolon  shift, and go to state 38


State 35

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket . TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_RightBracket  shift, and go to state 39


State 36

   18 Type: TT_Int TT_LeftBracket TT_RightBracket .

    $default  reduce using rule 18 (Type)


State 37

   17 MethodDeclaration: TT_Public Type . Identifier TT_LeftParen TypeIdentifierCommaTypeIdentifierRepeatedOptional TT_RightParen TT_LeftBrace VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4

    Identifier  go to state 40


State 38

   12 VarDeclaration: Type Identifier TT_Semicolon .

    $default  reduce using rule 12 (VarDeclaration)


State 39

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket . Identifier TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4

    Identifier  go to state 41


State 40

   17 MethodDeclaration: TT_Public Type Identifier . TT_LeftParen TypeIdentifierCommaTypeIdentifierRepeatedOptional TT_RightParen TT_LeftBrace VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace

    TT_LeftParen  shift, and go to state 42


State 41

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier . TT_RightParen TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_RightParen  shift, and go to state 43


State 42

   15 TypeIdentifierCommaTypeIdentifierRepeatedOptional: . %empty  [TT_RightParen]
   16                                                  | . Type Identifier CommaTypeIdentifierRepeated
   17 MethodDeclaration: TT_Public Type Identifier TT_LeftParen . TypeIdentifierCommaTypeIdentifierRepeatedOptional TT_RightParen TT_LeftBrace VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace
   18 Type: . TT_Int TT_LeftBracket TT_RightBracket
   19     | . TT_Boolean
   20     | . TT_Int
   21     | . Identifier
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4
    TT_Boolean     shift, and go to state 23
    TT_Int         shift, and go to state 24

    $default  reduce using rule 15 (TypeIdentifierCommaTypeIdentifierRepeatedOptional)

    TypeIdentifierCommaTypeIdentifierRepeatedOptional  go to state 44
    Type                                               go to state 45
    Identifier                                         go to state 28


State 43

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen . TT_LeftBrace Statement TT_RightBrace TT_RightBrace

    TT_LeftBrace  shift, and go to state 46


State 44

   17 MethodDeclaration: TT_Public Type Identifier TT_LeftParen TypeIdentifierCommaTypeIdentifierRepeatedOptional . TT_RightParen TT_LeftBrace VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace

    TT_RightParen  shift, and go to state 47


State 45

   16 TypeIdentifierCommaTypeIdentifierRepeatedOptional: Type . Identifier CommaTypeIdentifierRepeated
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4

    Identifier  go to state 48


State 46

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace . Statement TT_RightBrace TT_RightBrace
   24 Statement: . TT_LeftBrace StatementRepeated TT_RightBrace
   25          | . TT_If TT_LeftParen Expression TT_RightParen Statement TT_Else Statement
   26          | . TT_While TT_LeftParen Expression TT_RightParen Statement
   27          | . TT_Print TT_LeftParen Expression TT_RightParen TT_Semicolon
   28          | . Identifier TT_Assignment Expression TT_Semicolon
   29          | . Identifier TT_LeftBracket Expression TT_RightBracket TT_Assignment Expression TT_Semicolon
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4
    TT_LeftBrace   shift, and go to state 49
    TT_If          shift, and go to state 50
    TT_Print       shift, and go to state 51
    TT_While       shift, and go to state 52

    Statement   go to state 53
    Identifier  go to state 54


State 47

   17 MethodDeclaration: TT_Public Type Identifier TT_LeftParen TypeIdentifierCommaTypeIdentifierRepeatedOptional TT_RightParen . TT_LeftBrace VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace

    TT_LeftBrace  shift, and go to state 55


State 48

   13 CommaTypeIdentifierRepeated: . %empty
   14                            | . CommaTypeIdentifierRepeated TT_Comma Type Identifier
   16 TypeIdentifierCommaTypeIdentifierRepeatedOptional: Type Identifier . CommaTypeIdentifierRepeated

    $default  reduce using rule 13 (CommaTypeIdentifierRepeated)

    CommaTypeIdentifierRepeated  go to state 56


State 49

   22 StatementRepeated: . %empty
   23                  | . StatementRepeated Statement
   24 Statement: TT_LeftBrace . StatementRepeated TT_RightBrace

    $default  reduce using rule 22 (StatementRepeated)

    StatementRepeated  go to state 57


State 50

   25 Statement: TT_If . TT_LeftParen Expression TT_RightParen Statement TT_Else Statement

    TT_LeftParen  shift, and go to state 58


State 51

   27 Statement: TT_Print . TT_LeftParen Expression TT_RightParen TT_Semicolon

    TT_LeftParen  shift, and go to state 59


State 52

   26 Statement: TT_While . TT_LeftParen Expression TT_RightParen Statement

    TT_LeftParen  shift, and go to state 60


State 53

    4 MainClass: TT_Class Identifier TT_LeftBrace TT_Public TT_Static TT_Void TT_Main TT_LeftParen TT_String TT_LeftBracket TT_RightBracket Identifier TT_RightParen TT_LeftBrace Statement . TT_RightBrace TT_RightBrace

    TT_RightBrace  shift, and go to state 61


State 54

   28 Statement: Identifier . TT_Assignment Expression TT_Semicolon
   29          | Identifier . TT_LeftBracket Expression TT_RightBracket TT_Assignment Expression TT_Semicolon

    TT_LeftBracket  shift, and go to state 62
    TT_Assignment   shift, and go to state 63


State 55

    7 VarDeclarationRepeated: . %empty
    8                       | . VarDeclarationRepeated VarDeclaration
   17 MethodDeclaration: TT_Public Type Identifier TT_LeftParen TypeIdentifierCommaTypeIdentifierRepeatedOptional TT_RightParen TT_LeftBrace . VarDeclarationRepeated StatementRepeated TT_Return Expression TT_Semicolon TT_RightBrace

    $default  reduce using rule 7 (VarDeclarationRepeated)

    VarDeclarationRepeated  go to state 64


State 56

   14 CommaTypeIdentifierRepeated: CommaTypeIdentifierRepeated . TT_Comma Type Identifier
   16 TypeIdentifierCommaTypeIdentifierRepeatedOptional: Type Identifier CommaTypeIdentifierRepeated .  [TT_RightParen]

    TT_Comma  shift, and go to state 65

    $default  reduce using rule 16 (TypeIdentifierCommaTypeIdentifierRepeatedOptional)


State 57

   23 StatementRepeated: StatementRepeated . Statement
   24 Statement: . TT_LeftBrace StatementRepeated TT_RightBrace
   24          | TT_LeftBrace StatementRepeated . TT_RightBrace
   25          | . TT_If TT_LeftParen Expression TT_RightParen Statement TT_Else Statement
   26          | . TT_While TT_LeftParen Expression TT_RightParen Statement
   27          | . TT_Print TT_LeftParen Expression TT_RightParen TT_Semicolon
   28          | . Identifier TT_Assignment Expression TT_Semicolon
   29          | . Identifier TT_LeftBracket Expression TT_RightBracket TT_Assignment Expression TT_Semicolon
   52 Identifier: . TT_Identifier

    TT_Identifier  shift, and go to state 4
    TT_LeftBrace   shift, and go to state 49
    TT_RightBrace  shift, and go to state 66
    TT_If          shift, and go to state 50
    TT_Print       shift, and go to state 51
    TT_While       shift, and go to state 52

    Statement   go to state 67
    Identifier  go to state 54


State 58
